--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.Light.NoActionBar" >
+        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
 
         <activity
             android:name=".LogInActivity">
@@ -22,12 +22,15 @@
         </activity>
 
         <activity
+            android:name=".SignInActivity">
+        </activity>
+
+        <activity
             android:name=".MainActivity">
         </activity>
 
         <activity
-            android:name=".ProfileActivity"
-            android:parentActivityName=".MainActivity">
+            android:name=".ProfileActivity">
         </activity>
 
         <activity
@@ -38,6 +41,10 @@
             android:name=".CreateAccountActivity">
         </activity>
 
+        <activity
+            android:name=".OpenRequest">
+
+        </activity>
 
     </application>
 
