--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,12 @@
 
         <activity
             android:name=".LogInActivity">
+        </activity>
+
+        <activity android:name=".SignInActivity"/>
+
+        <activity
+            android:name=".MainActivity">
             <intent-filter>
 
                 <action android:name="android.intent.action.MAIN" />
@@ -19,10 +25,6 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-
-        <activity
-            android:name=".MainActivity">
         </activity>
 
         <activity
@@ -37,6 +39,8 @@
         <activity
             android:name=".CreateAccountActivity">
         </activity>
+
+        <activity android:name=".OpenRequest" />
 
     </application>
 
