firebase auth check added

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/AppTheme" >
 
         <activity
-            android:name=".LogInActivity">
+            android:name=".StartActivity">
         </activity>
 
         <activity android:name=".SignInActivity"/>
